golden/error/lex_fstring_double_hole_unclosed_eof.test
f"This f-string is not closed.{

# output:
 --> stdin:2:0
  |
2 | 
  | ^
Error: Expected '}'.

 --> stdin:1:30
  |
1 | f"This f-string is not closed.{
  |                               ^
Note: Unmatched '{' opened here.
